feat: [PL-42154]: Process notification trigger request (#55020)